crates/analyzer/tests/snapshots/errors__ctx_missing_create.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"

---
error: `create` expects 2 arguments, but 1 was provided
  ┌─ compile_errors/ctx_missing_create.fe:9:13
  │
9 │         Foo.create(0)
  │             ^^^^^^ - supplied 1 argument
  │             │       
  │             expects 2 arguments

error: incorrect type for argument to `Foo.create`
  ┌─ compile_errors/ctx_missing_create.fe:9:20
  │
9 │         Foo.create(0)
  │                    ^ this has type `u256`; expected `Context`

error: argument `ctx` to function `create` must be mutable
   ┌─ compile_errors/ctx_missing_create.fe:12:18
   │
12 │       Foo.create(ctx, 0)
   │                  ^^^ this is not mutable


